<?xml version="1.0"?>
<package format="2">
  <name>yamless</name>
  <version>0.0.1</version>
  <description>minimal user-friendly simple yaml parser in c++</description>

  <maintainer email="foehnx@gmail.com">foehnx</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>